Fixup landing page layout issue on mobile

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -5,7 +5,8 @@
 
 @layer components {
   .btn {
-    @apply py-2 
+    @apply 
+      py-2 
       px-3
       inline-flex
       justify-center 
@@ -20,14 +21,16 @@
   }
 
   .btn-primary {
-    @apply bg-primary-600
+    @apply 
+      bg-primary-600
       hover:bg-primary-700
       text-white
       font-semibold;
   }
 
   .btn-secondary {
-    @apply border 
+    @apply 
+      border 
       border-gray-200 
       bg-white 
       text-base-800 
@@ -39,7 +42,8 @@
   }
 
   .checkbox {
-    @apply cursor-pointer
+    @apply 
+      cursor-pointer
       shrink-0
       border-gray-200
       rounded
@@ -53,7 +57,8 @@
   }
 
   .input {
-    @apply py-3
+    @apply 
+      py-3
       px-4
       block
       w-full
@@ -74,7 +79,8 @@
   }
 
   .pin {
-    @apply block 
+    @apply 
+      block 
       text-center 
       border-gray-200 
       rounded-md 
@@ -94,11 +100,20 @@
   }
 
   .link {
-    @apply flex items-center gap-x-2 font-medium text-base-800 hover:text-blue-500 dark:text-base-200 dark:hover:text-blue-400;
+    @apply 
+      flex 
+      items-center 
+      gap-x-2 
+      font-medium 
+      text-base-800 
+      hover:text-blue-500 
+      dark:text-base-200 
+      dark:hover:text-blue-400;
   }
 
   .link-secondary {
-    @apply inline-flex 
+    @apply 
+      inline-flex 
       gap-x-2 
       text-base-600 
       hover:text-base-800 
@@ -107,14 +122,16 @@
   }
 
   .error {
-    @apply text-sm 
+    @apply 
+      text-sm 
       text-center 
       text-red-600 
       dark:text-red-400;
   }
 
   .dd-menu {
-    @apply w-40 
+    @apply 
+      w-40 
       shadow-md 
       rounded-lg 
       p-2 
@@ -128,7 +145,8 @@
   }
 
   .dd-menu-item {
-    @apply w-full 
+    @apply 
+      w-full 
       flex 
       items-center 
       gap-x-3.5 
